--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -1,8 +1,19 @@
-<!--<div flex align-items: center>
-    <i class="material-icons">home</i> Home
-</div>-->
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium a numquam consequatur? Veritatis libero, officiis nulla eius maxime, numquam, quibusdam earum quis temporibus ratione velit dolore error. Magni, delectus, recusandae?</p>
-<p>Laboriosam reprehenderit quibusdam illo repellat, eligendi ab consequatur quis corrupti velit nostrum id, accusamus, aspernatur sint. Deserunt ipsa nostrum quaerat consequuntur nulla quos, magnam, non deleniti, delectus doloremque asperiores fugit.</p>
-<p>Iste asperiores magnam optio nesciunt, corporis laboriosam quaerat assumenda non placeat reiciendis explicabo et nam eligendi voluptates, doloremque excepturi porro? Ducimus reiciendis asperiores deleniti tempora iste, error omnis modi ex?</p>
-<p>A explicabo aut corrupti deleniti, laborum culpa cumque nam voluptatibus error laudantium ipsa est quas esse sint eveniet repellat eaque voluptates aliquam quis atque qui officiis natus, reiciendis! Fugiat, natus?</p>
+<md-content>
+    <div flex="90">
+        <h1>FirePower</h1>
+        <p>Een programma waarmee je een krachttrainings programma kan maken gebaseerd op het 5-3-1 systeem van Jim Wendler. Dit programma 
+            genereerd een trainingsschema voor 4 hoofdoefeningen. <a href="https://www.youtube.com/watch?v=BYKScL2sgCs"> Bench press</a>, 
+            <a href="https://www.youtube.com/watch?v=bs_Ej32IYgo"> Squat</a>, <a href="https://www.youtube.com/watch?v=wol7Hko8RhY" target="_blank"> Overhead press</a> en 
+            <a href="https://www.youtube.com/watch?v=Y1IGeJEXpF4" target="_blank">deadlift.</a> Voor deze oefeningen worden
+            dan elk 3 workouts van vijf sets gegenereerd.
+            
+        </p>
+        <p>
+           
+            De gewichten die je per workout moet gebruiken zijn gebaseerd op percentage van je zogenaamde 
+             <a href="http://fitnessjunk.nl/wetenschap-bodybuilding/one-repetition-maximum/" target="_blank">1 rep max.</a> Dat is het gewicht dat je 
+            maximaal kan doen voor 1 herhaling.
+        </p>
+    </div>
+</md-content>
