--- a/src/client/app/gebruiker/gebruiker.html
+++ b/src/client/app/gebruiker/gebruiker.html
@@ -1,4 +1,67 @@
-{{vm.title}}
-                    
-               
-  <pre>{{vm.user}}</pre>        
+<md-content>
+    <div flex-xs flex-gt-xs="50" layout="column">
+        <md-card>
+            <md-card-title>
+                <md-card-title-text>
+                    <span class="md-headline">{{vm.user.naam}}</span>
+                    <span class="md-subhead">{{vm.user.email}}</span>
+                </md-card-title-text>
+                <md-card-title-media>
+                    <div class="md-media-sm card-media">
+                        <img ng-src="{{vm.imagePath}}" class="md-card-image" alt="Washed Out">
+                    </div>
+                </md-card-title-media>
+            </md-card-title>
+            <md-card-actions layout="row" layout-align="end center">
+                <md-button>Actie 1</md-button>
+                <md-button>Actie 2</md-button>
+            </md-card-actions>
+        </md-card>
+        </div>
+</md-content>
+<md-content>
+    <div flex-xs flex-gt-xs="80" layout="column">
+    <md-tabs md-dynamic-height md-border-bottom>
+        <md-tab label="Een">
+            <md-content class="md-padding">
+                <h1 class="md-display-2">Tab Een</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque
+                    ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus
+                    est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+            </md-content>
+        </md-tab>
+        <md-tab label="Twee">
+            <md-content class="md-padding">
+                <h1 class="md-display-2">Tab Twee</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque
+                    ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus
+                    est, sollicitudin consectetur felis nec, feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor
+                    in ultrices porttitor, orci enim rutrum enim, vel tempor sapien arcu a tellus. Vivamus convallis sodales
+                    ante varius gravida. Curabitur a purus vel augue ultrices ultricies id a nisl. Nullam malesuada consequat
+                    diam, a facilisis tortor volutpat et. Sed urna dolor, aliquet vitae posuere vulputate, euismod ac lorem.
+                    Sed felis risus, pulvinar at interdum quis, vehicula sed odio. Phasellus in enim venenatis, iaculis tortor
+                    eu, bibendum ante. Donec ac tellus dictum neque volutpat blandit. Praesent efficitur faucibus risus,
+                    ac auctor purus porttitor vitae. Phasellus ornare dui nec orci posuere, nec luctus mauris semper.</p>
+                <p>Morbi viverra, ante vel aliquet tincidunt, leo dolor pharetra quam, at semper massa orci nec magna. Donec
+                    posuere nec sapien sed laoreet. Etiam cursus nunc in condimentum facilisis. Etiam in tempor tortor. Vivamus
+                    faucibus egestas enim, at convallis diam pulvinar vel. Cras ac orci eget nisi maximus cursus. Nunc urna
+                    libero, viverra sit amet nisl at, hendrerit tempor turpis. Maecenas facilisis convallis mi vel tempor.
+                    Nullam vitae nunc leo. Cras sed nisl consectetur, rhoncus sapien sit amet, tempus sapien.</p>
+                <p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum.
+                    Morbi eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu
+                    fermentum nunc. Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim
+                    scelerisque, finibus commodo lectus.</p>
+            </md-content>
+        </md-tab>
+        <md-tab label="Drie">
+            <md-content class="md-padding">
+                <h1 class="md-display-2">Tab Drie</h1>
+                <p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum.
+                    Morbi eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu
+                    fermentum nunc. Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim
+                    scelerisque, finibus commodo lectus.</p>
+            </md-content>
+        </md-tab>
+    </md-tabs>
+    </div>
+</md-content>
