trainingberekening afgerond naar 5 bij 1rm van 70

--- a/src/client/app/gebruiker/gebruiker.html
+++ b/src/client/app/gebruiker/gebruiker.html
@@ -19,8 +19,8 @@
                 </div>
             </md-card-content>
             <md-card-actions layout="row" layout-align="end center">
-                <md-button>Actie 1</md-button>
-                <md-button>Actie 2</md-button>
+                <md-button ng-click="vm.gaTrainen()">Trainen</md-button>
+                <md-button ng-click="vm.gaOverzichten()">Overzichten</md-button>
             </md-card-actions>
         </md-card>
     </div>
